<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!--tools:context=".MainFragment">-->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/height"
            android:maxLength="5"
            app:layout_constraintStart_toEndOf="@+id/heightComment" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/heightComment"
            app:layout_constraintBottom_toBottomOf="@+id/heightComment"
            app:layout_constraintEnd_toStartOf="@+id/textView" app:layout_constraintVertical_bias="0.0"
    />
    <TextView
            android:text="@string/textContents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anounce" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/height"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightComment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/weight"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heightComment"
            app:layout_constraintBottom_toTopOf="@+id/bmiCal"/>
    <TextView
            android:text="@string/textcontents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightComment"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/height"
            app:layout_constraintTop_toBottomOf="@+id/anounce" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/weightComment"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weight"
            android:maxLength="5"
            app:layout_constraintStart_toEndOf="@+id/weightComment" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weightComment"
            app:layout_constraintBottom_toBottomOf="@+id/weightComment"
            app:layout_constraintEnd_toStartOf="@+id/textView3" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/bmiCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiCal" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/weight"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResult" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bmiCal" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/saveButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            app:layout_constraintTop_toTopOf="@+id/deleteButton" app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/height"
            app:layout_constraintBottom_toBottomOf="@+id/height" app:layout_constraintStart_toEndOf="@+id/height"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/weight"
            app:layout_constraintBottom_toBottomOf="@+id/weight" app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/contents"
            android:hint="@string/comment" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bmiResult" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/deleteButton" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:name="com.example.bmiapp.HeaderFragment"
            android:id="@+id/mainFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>